# tinyhgvs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  zensical.toml
.github/workflows/: ci.yml  docs.yml  release-python.yml  release-rust.yml
crates/hgvs-lens/: Cargo.toml
crates/hgvs-lens/src/: grammar.pest  lib.rs
crates/tinyhgvs/: Cargo.toml
crates/tinyhgvs/src/: diagnostics.rs  error.rs  lib.rs  model.rs  parser.rs
crates/tinyhgvs/tests/: test_diagnostics.rs  test_parser.rs
docs/: index.md  unsupported.md
docs/api/: api.md  errors.md  models-nucleotide.md  models-protein.md  models.md
docs/javascripts/: tablesort.js
docs/stylesheets/: extra.css
py-tinyhgvs/: Cargo.toml  README.md  pyproject.toml
py-tinyhgvs/python/tinyhgvs/: __init__.py  _tinyhgvs.pyi  api.py  errors.py
py-tinyhgvs/python/tinyhgvs/models/: __init__.py  nucleotide.py  protein.py  shared.py
py-tinyhgvs/src/: lib.rs
py-tinyhgvs/tests/: test_parser.py
