[workspace]
resolver = "2"
members = [
  "crates/tinyhgvs",
  "py-tinyhgvs"
]

[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.65"
license = "MIT"
repository = "https://github.com/svm-zhang/tinyhgvs"
homepage = "https://github.com/svm-zhang/tinyhgvs"
documentation = "https://docs.rs/tinyhgvs"
